crates/math-core/tests/snapshots/wiki_test__wiki230.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: "| \\uparrow \\rangle"
---
<math>
    <mo stretchy="false" lspace="0" rspace="0">|</mo>
    <mo stretchy="false" rspace="0">↑</mo>
    <mo stretchy="false">⟩</mo>
</math>
