crates/math-core/tests/snapshots/wiki_test__wiki231.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: "\\left| \\uparrow \\right\\rangle"
---
<math>
    <mrow>
        <mo>|</mo>
        <mo stretchy="false" lspace="0" rspace="0">↑</mo>
        <mo>⟩</mo>
    </mrow>
</math>
