crates/math-core/tests/snapshots/wiki_test__wiki233.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: "| \\mathord\\uparrow \\rangle"
---
<math>
    <mo stretchy="false" lspace="0" rspace="0">|</mo>
    <mo stretchy="false" lspace="0" rspace="0">↑</mo>
    <mo stretchy="false">⟩</mo>
</math>
