crates/math-core/tests/snapshots/wiki_test__wiki234.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: "\\wideparen{AB}"
---
<math>
    <mover accent="true">
        <mrow>
            <mi>A</mi>
            <mi>B</mi>
        </mrow>
        <mo>⏜</mo>
    </mover>
</math>
