crates/math-core/tests/snapshots/wiki_test__wiki235.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: "\\dddot{x}"
---
<math>
    <mover accent="true">
        <mi>x</mi>
        <mo>⃛</mo>
    </mover>
</math>
