crates/math-core/tests/snapshots/wiki_test__wiki237.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: "\\text{\\sout{q}}"
---
<math>
    <mtext><span style="text-decoration: line-through">q</span></mtext>
</math>
