crates/math-core/tests/snapshots/wiki_test__wiki240.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: α π
---
<math>
    <mi>α</mi>
    <mi>π</mi>
</math>
