crates/math-core/tests/snapshots/wiki_test__wiki243.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: "\\left( \\frac{\\left(3-x\\right) \\times 2}{3-x} \\right)"
---
<math>
    <mrow>
        <mo>(</mo>
        <mfrac>
            <mrow>
                <mrow>
                    <mo>(</mo>
                    <mn>3</mn>
                    <mo lspace="0" rspace="0">−</mo>
                    <mi>x</mi>
                    <mo>)</mo>
                </mrow>
                <mo lspace="0" rspace="0">×</mo>
                <mn>2</mn>
            </mrow>
            <mrow>
                <mn>3</mn>
                <mo lspace="0" rspace="0">−</mo>
                <mi>x</mi>
            </mrow>
        </mfrac>
        <mo>)</mo>
    </mrow>
</math>
