crates/math-core/tests/snapshots/wiki_test__wiki253.snap
---
source: crates/math-core/tests/wiki_test.rs
expression: "\\phi_n(\\kappa) = 0.033C_n^2\\kappa^{-11/3}, \\quad\\frac{1}{L_0}\\ll\\kappa\\ll\\frac{1}{l_0}"
---
<math>
    <msub>
        <mi>ϕ</mi>
        <mi>n</mi>
    </msub>
    <mo stretchy="false">(</mo>
    <mi>κ</mi>
    <mo stretchy="false">)</mo>
    <mo>=</mo>
    <mn>0.033</mn>
    <msubsup>
        <mi>C</mi>
        <mi>n</mi>
        <mn>2</mn>
    </msubsup>
    <msup>
        <mi>κ</mi>
        <mrow>
            <mo lspace="0" rspace="0">−</mo>
            <mn>11</mn>
            <mo lspace="0" rspace="0">/</mo>
            <mn>3</mn>
        </mrow>
    </msup>
    <mo>,</mo>
    <mspace width="1em"/>
    <mfrac>
        <mn>1</mn>
        <msub>
            <mi>L</mi>
            <mn>0</mn>
        </msub>
    </mfrac>
    <mo>≪</mo>
    <mi>κ</mi>
    <mo>≪</mo>
    <mfrac>
        <mn>1</mn>
        <msub>
            <mi>l</mi>
            <mn>0</mn>
        </msub>
    </mfrac>
</math>
